; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_signal.c_lock_task_sighand.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_signal.c_lock_task_sighand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sighand_struct = type { i32 }
%struct.task_struct = type { %struct.sighand_struct* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.sighand_struct* @lock_task_sighand(%struct.task_struct* %0, i64* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca i64*, align 8
  %5 = alloca %struct.sighand_struct*, align 8
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store i64* %1, i64** %4, align 8
  %6 = call i32 (...) @rcu_read_lock()
  br label %7

7:                                                ; preds = %33, %2
  %8 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %9 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %8, i32 0, i32 0
  %10 = load %struct.sighand_struct*, %struct.sighand_struct** %9, align 8
  %11 = call %struct.sighand_struct* @rcu_dereference(%struct.sighand_struct* %10)
  store %struct.sighand_struct* %11, %struct.sighand_struct** %5, align 8
  %12 = load %struct.sighand_struct*, %struct.sighand_struct** %5, align 8
  %13 = icmp eq %struct.sighand_struct* %12, null
  %14 = zext i1 %13 to i32
  %15 = call i64 @unlikely(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %7
  br label %39

18:                                               ; preds = %7
  %19 = load %struct.sighand_struct*, %struct.sighand_struct** %5, align 8
  %20 = getelementptr inbounds %struct.sighand_struct, %struct.sighand_struct* %19, i32 0, i32 0
  %21 = load i64*, i64** %4, align 8
  %22 = load i64, i64* %21, align 8
  %23 = call i32 @spin_lock_irqsave(i32* %20, i64 %22)
  %24 = load %struct.sighand_struct*, %struct.sighand_struct** %5, align 8
  %25 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %26 = getelementptr inbounds %struct.task_struct, %struct.task_struct* %25, i32 0, i32 0
  %27 = load %struct.sighand_struct*, %struct.sighand_struct** %26, align 8
  %28 = icmp eq %struct.sighand_struct* %24, %27
  %29 = zext i1 %28 to i32
  %30 = call i64 @likely(i32 %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %33

32:                                               ; preds = %18
  br label %39

33:                                               ; preds = %18
  %34 = load %struct.sighand_struct*, %struct.sighand_struct** %5, align 8
  %35 = getelementptr inbounds %struct.sighand_struct, %struct.sighand_struct* %34, i32 0, i32 0
  %36 = load i64*, i64** %4, align 8
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @spin_unlock_irqrestore(i32* %35, i64 %37)
  br label %7

39:                                               ; preds = %32, %17
  %40 = call i32 (...) @rcu_read_unlock()
  %41 = load %struct.sighand_struct*, %struct.sighand_struct** %5, align 8
  ret %struct.sighand_struct* %41
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.sighand_struct* @rcu_dereference(%struct.sighand_struct*) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i64 @likely(i32) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
